# dpg-components

./: .gitignore  README.md  components.py  demo.py  dpgx.py  main.py  pyproject.toml  sanbox.py  test_layout.ini  test_widgets.json
components/: components.py
src/: demo.py  demo_shell.py
src/DPGComponents/: DPGComponents.py  __init__.py  demo.py
src/dpg-components/: components.py  demo.py  dpg_components.py
src/dpg-components/images/svg/: readme.txt
src/dpg_components/: components.py  demo.py
