[project]
name = "dpg_components"
version = "0.0.1"
authors = [
  { name="Smith", email="winston.doublethink@gmail.com" },
]
dependencies = [
    "dearpygui >= 2.0.0"
]
description = "Components for DPG"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/benjaminthedonkey/dpg-components"
Issues = "https://github.com/benjaminthedonkey/dpg-components/issues"